finish form basics project

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>NEW USER</h1>
+<p>There are now <%= pluralize(User.count, "user") %> in the database.</p>
 
 <!--<form action="/users" method="post" accept-charset="UTF-8">-->
 <!--  <input type="hidden" name="authenticity_token" value="<%#= form_authenticity_token %>">-->
@@ -14,15 +15,17 @@
 <!--  <input type="submit" value="Submit">-->
 <!--</form>-->
 
-<%= form_tag("/users", method: "post") do %>
-  <%= label_tag(:username, "Username:") %>
-  <%= text_field_tag(:username) %>
-  <br><br>
-  <%= label_tag(:email, "Email:") %>
-  <%= email_field_tag(:email) %>
-  <br><br>
-  <%= label_tag(:password, "Password:") %>
-  <%= password_field_tag(:password) %>
-  <br><br>
-  <%= submit_tag("Submit") %>
-<% end %>
+<%#= form_tag("/users", method: "post") do %>
+  <%#= label_tag(:username, "Username:") %>
+  <%#= text_field_tag(:username) %>
+<!--  <br><br>-->
+  <%#= label_tag(:email, "Email:") %>
+  <%#= email_field_tag(:email) %>
+<!--  <br><br>-->
+  <%#= label_tag(:password, "Password:") %>
+  <%#= password_field_tag(:password) %>
+<!--  <br><br>-->
+  <%#= submit_tag("Submit") %>
+<%# end %>
+
+<%= render "form" %>
